@@ -37,6 +37,7 @@ Enhancements
   * Add option for custom compiler flags for C/C++ on build and remove march
     option from setup.cfg (Issue #3428, PR #3429).
   * Added R/S Chirality support to RDKit parsed molecules
+  * Added MDAnalysis.lib.distances.minimize_vectors
 
 Changes
   * TRZReader now defaults to a `dt` of 1.0 (instead of 0.0 previously) when
